# marimo-dataentry

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data/in/: to_test_report_20240610.csv
dataentry-app/: app.py  demo-pipeline.py  pyproject.toml
dataentry-app/modules/checker/: __init__.py  checker.py  unitcheck.py
dataentry-app/modules/checker/samplereportchecker/: __init__.py  unit_check_content.py  unit_check_headers.py  unit_check_summary.py
dataentry-app/modules/domain/: __init__.py
dataentry-app/modules/pipeline/: __init__.py  step.py
dataentry-app/modules/uploader/: __init__.py
sample_reports/: sample_report_BAD_HEADERS.csv  sample_report_BAD_KPI_FORMAT.csv  sample_report_BAD_REPORT_NAME.csv  sample_report_BAD_REPORT_PERIOD_FORMAT.csv  sample_report_BAD_REPORT_PERIOD_RANGE.csv  sample_report_GOOD.csv
