[tool.poetry]
name = "dataentry"
version = "1.0.0.dev1"
description = "Data Entry"
authors = ["Sébastien VEY"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
polars = {extras = ["pyarrow"], version = "^0.20.31"}
marimo = "^0.6.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
